@@ -113,8 +113,8 @@ class Compiler:
         self.SetLDFlags(ldflags or [])
             
 
-    def Compile(self, mode, files, dir, options = [], output = None,
-                timeout = -1):
+    def Compile(self, mode, files, dir, options = [], ldflags = [],
+                output = None, timeout = -1):
         """Compile the 'files'.
         
         'mode' -- The compilation mode (one of the 'Compiler.modes')
@@ -128,6 +128,10 @@ class Compiler:
         
         'options' -- A sequence of strings indicating additional
         options that should be provided to the compiler.
+
+        'ldflags' -- A sequence of strings indicating additional
+        linker flags that should be provided to the compiler, if
+        linking is done.
 
         'output' -- The name of the file should be created by the
         compilation.  If 'None', the compiler will use a default
@@ -143,7 +147,8 @@ class Compiler:
         outpt and standard errror generated by the compiler."""
 
         # Get the command to use.
-        command = self.GetCompilationCommand(mode, files, options, output)
+        command = self.GetCompilationCommand(mode, files, options,
+                                             ldflags, output)
         # Invoke the compiler.
         return self.ExecuteCommand(dir, command, timeout)
         
@@ -172,7 +177,8 @@ class Compiler:
         return (status, executable.stdout)
 
         
-    def GetCompilationCommand(self, mode, files, options=[], output=None):
+    def GetCompilationCommand(self, mode, files, options=[],
+                              ldflags = [], output=None):
         """Return the appropriate command for compiling 'files'.
 
         'mode' -- The compilation mode (one of the 'Compiler.modes')
@@ -184,6 +190,10 @@ class Compiler:
 
         'options' -- A sequence of strings indicating additional
         options that should be provided to the compiler.
+
+        'ldflags' -- A sequence of strings indicating additional
+        linker flags that should be provided to the compiler, if
+        linking is done.
 
         'output' -- The name of the file should be created by the
         compilation.  If 'None', the compiler will use a default
@@ -208,6 +218,7 @@ class Compiler:
         # Add the input files.
         command += files
         if mode == Compiler.MODE_LINK:
+            command += ldflags
             command += self.GetLDFlags()
 
         return command
